@@ -1561,7 +1561,45 @@ const HChar* LibVEX_EmNote_string ( VexEmNote ew )
      case EmFail_S390X_vx:
         return "Encountered an instruction that requires the vector facility.\n"
                "  That facility is not available on this host";
-     default: 
+     case EmFail_S390X_ppno:
+        return "Instruction ppno is not supported on this host.";
+     case EmFail_S390X_vxe:
+        return "Encountered an instruction that requires the vector-extensions"
+               " facility 1.\n"
+               "  That facility is not available on this host";
+     case EmFail_S390X_dflt:
+        return "Encountered an instruction that requires the deflate-conversion"
+               " facility.\n"
+               "  That facility is not available on this host";
+     case EmFail_S390X_nnpa:
+        return "Encountered an instruction that requires the"
+               " neural-network-processing-assist facility.\n"
+               "  That facility is not available on this host";
+     case EmFail_S390X_vxe2:
+        return "Encountered an instruction that requires the vector-extensions\n"
+               " facility 2.\n"
+               "  That facility is not available on this host";
+     case EmFail_S390X_vxd:
+        return "Encountered an instruction that requires the vector-packed-decimal\n"
+               " facility.\n"
+               "  That facility is not available on this host";
+     case EmFail_S390X_msa:
+        return "Encountered an instruction that requires the message-security"
+               " assist.\n"
+               "  That assist is not available on this host";
+     case EmFail_S390X_msa4:
+        return "Encountered an instruction that requires the"
+               " message-security-assist extension 4.\n"
+               "  That extension is not available on this host";
+     case EmFail_S390X_msa8:
+        return "Encountered an instruction that requires the"
+               " message-security-assist extension 8.\n"
+               "  That extension is not available on this host";
+     case EmFail_S390X_msa9:
+        return "Encountered an instruction that requires the"
+               " message-security-assist extension 9.\n"
+               "  That extension is not available on this host";
+     default:
         vpanic("LibVEX_EmNote_string: unknown warning");
    }
 }
@@ -1894,7 +1932,14 @@ static const HChar* show_hwcaps_s390x ( UInt hwcaps )
       { VEX_HWCAPS_S390X_MI2,   "mi2" },
       { VEX_HWCAPS_S390X_LSC2,  "lsc2" },
       { VEX_HWCAPS_S390X_VXE,   "vxe" },
+      { VEX_HWCAPS_S390X_NNPA,  "nnpa" },
       { VEX_HWCAPS_S390X_DFLT,  "dflt" },
+      { VEX_HWCAPS_S390X_VXE2,  "vxe2" },
+      { VEX_HWCAPS_S390X_VXD,   "vxd" },
+      { VEX_HWCAPS_S390X_MSA,   "msa" },
+      { VEX_HWCAPS_S390X_MSA4,  "msa4" },
+      { VEX_HWCAPS_S390X_MSA8,  "msa8" },
+      { VEX_HWCAPS_S390X_MSA9,  "msa9" },
    };
    /* Allocate a large enough buffer */
    static HChar buf[sizeof prefix + 
